# recon-graphrag

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  release-please-config.json  test_embed.py
.github/workflows/: ci.yml  release.yml
docs/: 01-installation.md  02-quickstart.md  03-schema.md  04-indexing.md  05-pipelines.md  06-search.md  07-example.md  08-providers.md  09-workflows.md  10-testing.md  advanced-workflows.md  community-level-numbering.md  community_levels_vs_microsoft_graphrag.md  example.md  examples.md  indexes.md  indexing.md  installation.md  movie-industry-example.md  pipelines.md  providers.md  quickstart.md  schema.md  search-internals.md  search-under-the-hood.md  search.md  testing.md  workflows.md
evaluation/: README.md  runner.py  schemas.py
evaluation/fixtures/: corpus.jsonl  questions.jsonl
examples/: README.md  __init__.py  build_communities.py  common.py  communities.py  compare_backends.py  compare_memgraph_neo4j.py  config.py  data.py  extract.py  extract_movie_graph.py  ingest.py  ingest_movie_graph.py  prompts.py  query_suite.py  schema.py  search.py  search_movie_graph.py
examples/advanced/: __init__.py  compare_backends.py
examples/artifacts/: movie_graph.json
examples/movie_industry/: app.py  build.py  build_falkordb.py  build_graph.py  build_neo4j.py  config.py  data.py  prompts.py  query.py  schema.py  search.py  search_falkordb.py  search_neo4j.py
plans/: backends.md
recon_graphrag/: __init__.py  _version.py  graph_store.py  indexes.py  pipeline.py  providers.py  types.py
recon_graphrag/communities/: __init__.py  context.py  detection.py  embeddings.py  pipeline.py  reports.py  summarization.py
recon_graphrag/communities/neo4j/: __init__.py  (+1 more)
recon_graphrag/config/: __init__.py  settings.py
recon_graphrag/embeddings/: __init__.py  base.py  community_reports.py  entities.py  factory.py
recon_graphrag/extraction/: __init__.py  artifacts.py  assembler.py  chunking.py  description_summarizer.py  extractor.py  parser.py  prompts.py  schema.py  types.py  validator.py
recon_graphrag/graph/: __init__.py  base.py  index_manager.py  neo4j_store.py  neo4j_writer.py  writer.py
recon_graphrag/graphdb/: __init__.py  base.py  cypher.py  entity_resolution.py  entity_resolution_context.py  store_base.py
recon_graphrag/llm/: __init__.py  base.py  factory.py
recon_graphrag/models/: __init__.py  artifacts.py  errors.py  types.py
recon_graphrag/pipelines/: __init__.py  graphrag_pipeline.py  writer_base.py
recon_graphrag/providers/: __init__.py  _compat.py
recon_graphrag/retrieval/: __init__.py  base.py  citations.py  community_levels.py  drift.py  drift_types.py  global_paper.py  global_search.py  hybrid.py  local.py  mixed_context.py  search.py  search_drift.py
recon_graphrag/utils/: __init__.py  logging.py  tokens.py
tests/: README.md  test_provider_compat.py
tests/communities/: test_context.py  test_detection.py  test_embeddings.py  test_pipeline.py  test_reports.py  test_summarization.py
tests/embeddings/: test_community_report_embedder.py  test_embedding_base.py  test_embedding_factory.py  test_entity_embedder.py
tests/evaluation/: test_runner.py  test_schemas.py
tests/examples/: test_movie_common.py
tests/extraction/: test_artifacts.py  test_assembler.py  test_assembler_characterization.py  test_chunking.py  test_extractor.py  test_parser.py  test_prompts.py  test_schema.py  test_types.py  test_validator.py
tests/graph/: test_index_manager.py  test_neo4j_store.py  test_writer.py
tests/graphdb/: __init__.py  test_cypher.py  test_entity_resolution_contract.py  test_store_base.py
tests/integration/: database_scenarios.py  factories.py  movie_smoke_support.py  support.py  synthetic_e2e_support.py  test_azure_openai_env.py  test_integration_support.py  test_llm_extraction.py  test_movie_example_smoke.py  test_openrouter_env.py  test_smoke_full.py  test_smoke_search.py  test_workflow_deterministic.py
tests/llm/: test_llm_base.py  test_llm_factory.py  test_provider_compat.py
tests/models/: test_artifacts.py
tests/pipelines/: test_graph_builder.py  test_writer_characterization.py  writer_scenarios.py
tests/retrieval/: test_alignment.py  test_community_levels.py  test_community_levels_expanded.py  test_drift.py  test_global_paper.py  test_global_search.py  test_hybrid.py  test_mixed_context.py
tests/utils/: test_tokens.py
(+60 files in other folders)
