[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-graphrag"
version = "0.1.0"
description = "Domain-agnostic GraphRAG SDK built on Neo4j — extraction, community detection, and multi-mode retrieval"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "recon-graphrag contributors"}]
keywords = ["graphrag", "neo4j", "knowledge-graph", "retrieval", "rag"]

dependencies = [
    "neo4j>=5.11",
    "openai>=2.36.0",
    "pydantic>=2.0",
    "rapidfuzz>=3.0",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
ollama = ["ollama"]
sentence-transformers = ["sentence-transformers>=2.0"]
all = ["openai>=1.0", "ollama", "sentence-transformers>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
include = ["recon_graphrag*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
markers = [
    "integration: tests that call external services and require explicit opt-in",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["recon_graphrag/__init__.py:__version__"]
branch = "master"
tag_format = "v{version}"
commit_parser = "angular"
commit_message = "chore(release): bump version to {version} [skip ci]"
build_command = "pip install build && python -m build"
upload_to_pypi = false
upload_to_release = true
major_on_zero = false

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest-asyncio>=1.3.0",
]
