[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon-graphrag"
version = "0.6.1"
description = "Domain-agnostic GraphRAG SDK for Neo4j and Memgraph with extraction, community detection, and multi-mode retrieval"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Recon-GraphRAG contributors"}]
keywords = ["graphrag", "neo4j", "memgraph", "knowledge-graph", "retrieval", "rag"]

dependencies = [
    "neo4j>=5.11",
    "openai>=2.36.0",
    "rapidfuzz>=3.0",
    "sentence-transformers>=5.4.1",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
ollama = ["ollama"]
sentence-transformers = ["sentence-transformers>=2.0"]
all = ["openai>=1.0", "ollama", "sentence-transformers>=2.0"]
evaluation = ["pydantic>=2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=1.3.0", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/FadhelHaidar/Recon-GraphRAG"
Documentation = "https://github.com/FadhelHaidar/Recon-GraphRAG#readme"
Repository = "https://github.com/FadhelHaidar/Recon-GraphRAG.git"
Issues = "https://github.com/FadhelHaidar/Recon-GraphRAG/issues"
Changelog = "https://github.com/FadhelHaidar/Recon-GraphRAG/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["recon_graphrag*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
markers = [
    "integration: tests that call external services and require explicit opt-in",
    "characterization: tests that document current behavior, including known defects",
    "provider: real LLM/embedder endpoint checks",
    "database: real graph database checks without real AI",
    "workflow: real graph database workflow using deterministic fake AI",
    "e2e: full real LLM/embedder/database workflow",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
]
